# EchelleSimulator

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  EchelleSimulator.kdev4  README.md  _c_c_d_8cpp.html  _c_c_d_8h.html  _c_c_d_8h_source.html  _introduction_8md.html  _p_s_f_8cpp.html  _p_s_f_8h.html  _p_s_f_8h_source.html  _r_e_a_d_m_e_8md.html  _slit_8cpp.html  _slit_8h.html  _slit_8h_source.html  annotated.html  build_2_c_make_files_22_88_812_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2_c_make_files_22_88_812_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  class_blackbody-members.html  class_blackbody.html  class_c_c_d-members.html  class_c_c_d.html  class_c_s_v_iterator-members.html  class_c_s_v_iterator.html  class_c_s_v_row-members.html  class_c_s_v_row.html  class_constant-members.html  class_constant.html  class_efficiency-members.html  class_efficiency.html  class_grating_efficiency-members.html  class_grating_efficiency.html  class_ideal_etalon-members.html  class_ideal_etalon.html  class_line_list-members.html  (+132 more)
data/: MaroonX-f1.pickle  README.txt  maroonx.py
data/spectrographs/: MaroonX.hdf  MaroonXred.hdf  NEID.hdf  VeloceRosso.hdf
doc/: Doxyfile  Doxyfile.bak  Introduction.md  installation.md  latex_preamble.sty  mainpage.dox  usage.md
doc/html/: _c_c_d_8cpp.html  _c_c_d_8h.html  _c_c_d_8h_source.html  _introduction_8md.html  _p_s_f_8cpp.html  _p_s_f_8h.html  _p_s_f_8h_source.html  _slit_8cpp.html  _slit_8h.html  _slit_8h_source.html  annotated.html  class_blackbody-members.html  class_blackbody.html  class_c_c_d-members.html  class_c_c_d.html  class_c_s_v_iterator-members.html  class_c_s_v_iterator.html  class_c_s_v_row-members.html  class_c_s_v_row.html  class_constant-members.html  class_constant.html  class_efficiency-members.html  class_efficiency.html  class_grating_efficiency-members.html  class_grating_efficiency.html  class_ideal_etalon-members.html  class_ideal_etalon.html  class_line_list-members.html  class_line_list.html  class_matrix_simulator-members.html  class_matrix_simulator.html  class_p_s_f-members.html  class_p_s_f.html  class_p_s_f___z_e_m_a_x-members.html  class_p_s_f___z_e_m_a_x.html  class_p_s_f__gaussian-members.html  class_p_s_f__gaussian.html  class_phoenix_spectrum-members.html  class_phoenix_spectrum.html  class_slit-members.html  (+71 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_4.js  classes_6.js  classes_c.js  defines_1.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_3.js  functions_4.js  functions_9.js  functions_b.js  functions_c.js  namespaces_1.js  namespaces_2.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_3.js  (+10 more)
doc/latex/: _c_c_d_8cpp.tex  _c_c_d_8h.tex  _introduction_8md.tex  _p_s_f_8cpp.tex  _p_s_f_8h.tex  _slit_8cpp.tex  _slit_8h.tex  annotated.tex  class_blackbody.eps  class_blackbody.tex  class_c_c_d.tex  class_c_s_v_iterator.tex  class_c_s_v_row.tex  class_constant.eps  class_constant.tex  class_efficiency.eps  class_efficiency.tex  class_grating_efficiency.eps  class_grating_efficiency.tex  class_ideal_etalon.eps  class_ideal_etalon.tex  class_line_list.eps  class_line_list.tex  class_matrix_simulator.tex  class_p_s_f.eps  class_p_s_f.tex  class_p_s_f___z_e_m_a_x.eps  class_p_s_f___z_e_m_a_x.tex  class_p_s_f__gaussian.eps  class_p_s_f__gaussian.tex  class_phoenix_spectrum.eps  class_phoenix_spectrum.tex  class_slit.tex  class_source.eps  class_source.tex  classhdf5opencv_1_1_hdf5_open_c_v_exception.eps  classhdf5opencv_1_1_hdf5_open_c_v_exception.tex  classnoise.tex  concept.tex  concept_8md.tex  (+36 more)
doc/plots/: scalex.html  spectral_format.html
docs/: Doxyfile  Introduction.md  concept.md  conf.py  environment.yml  index.rst  installation.rst  requirements.txt  usage.rst
examples/: timit.py  veloce.py
examples/model_creation/: PyEchelle.py  R4Spec_100mm_Paraxial_raytrace.ZDA  R4Spec_100mm_Paraxial_raytrace.zmx  model_creation.py
examples/scripting/: timit.py  veloce.py
html/: index.html
include/: CCD.h  Histogram.h  PSF.h  Slit.h  Spectra.h  csv_reader.h  efficiency.h  hdf5opencv.h  helper.h  matrixsimulator.h  noise.h  random_generator.h  source.h  spline.h  telescope.h
latex/: refman.tex
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_7.js  (+38 more)
src/: CCD.cpp  PSF.cpp  Slit.cpp  efficiency.cpp  hdf5opencv.cpp  helper.cpp  main.cpp  matrixsimulator.cpp  show.py  slit.cpp  source.cpp  telescope.cpp
src/CMakeModules/: FindCCFITS.cmake  FindCFITSIO.cmake
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  basic_test.cpp
